--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -681,3 +681,14 @@ notes:
           \sqrt[3]{54}
         }
       \\]
+- id: 1537488177451
+  fields:
+    Front: |
+      ## RoA problem 079: Simplify the radicals:
+      \\[
+        \frac{
+          \sqrt[4]{32x^4}
+        }{
+          \sqrt[4]{2}
+        }
+      \\]
