--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -717,3 +717,10 @@ notes:
           \sqrt[5]{3a}
         }
       \\]
+- id: 1537488177651
+  fields:
+    Front: |
+      ## RoA problem 083: Use the Laws of Exponents to rewrite and simplify the expression:
+      \\[
+        3^{10} \times 9^8
+      \\]
