--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -752,3 +752,10 @@ notes:
       \\[
         \frac{a^{-3}b^4}{a^{-5}b^5}
       \\]
+- id: 1537488177901
+  fields:
+    Front: |
+      ## RoA problem 088: Use the Laws of Exponents to rewrite and simplify the expression:
+      \\[
+        \frac{x^{-1} + y^{-1}}{(x + y)^{-1}}
+      \\]
