--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -773,3 +773,10 @@ notes:
       \\[
         96^{1/5}
       \\]
+- id: 1537488178052
+  fields:
+    Front: |
+      ## RoA problem 091: Use the Laws of Exponents to rewrite and simplify the expression:
+      \\[
+        125^{2/3}
+      \\]
