--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -780,3 +780,10 @@ notes:
       \\[
         125^{2/3}
       \\]
+- id: 1537488178101
+  fields:
+    Front: |
+      ## RoA problem 092: Use the Laws of Exponents to rewrite and simplify the expression:
+      \\[
+        64^{-4/3}
+      \\]
