--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -787,3 +787,10 @@ notes:
       \\[
         64^{-4/3}
       \\]
+- id: 1537488178151
+  fields:
+    Front: |
+      ## RoA problem 093: Use the Laws of Exponents to rewrite and simplify the expression:
+      \\[
+        (2x^2y^4)^{3/2}
+      \\]
