--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -900,3 +900,10 @@ notes:
       \\[
         \sqrt{x^2 + 3x + 4} - x
       \\]
+- id: 1537488178934
+  fields:
+    Front: |
+      ## RoA problem 108: Rationalize the expression:
+      \\[
+        \sqrt{x^2 + x} - \sqrt{x^2 - x}
+      \\]
