--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -907,3 +907,10 @@ notes:
       \\[
         \sqrt{x^2 + x} - \sqrt{x^2 - x}
       \\]
+- id: 1537488178984
+  fields:
+    Front: |
+      ## RoA problem 109: State whether or not the following equation is true for all values of the variable:
+      \\[
+        \sqrt{x^2} = x
+      \\]
