--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -914,3 +914,10 @@ notes:
       \\[
         \sqrt{x^2} = x
       \\]
+- id: 1537488179034
+  fields:
+    Front: |
+      ## RoA problem 110: State whether or not the following equation is true for all values of the variable:
+      \\[
+        \sqrt{x^2 + 4} = |x| + 2
+      \\]
