--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -921,3 +921,10 @@ notes:
       \\[
         \sqrt{x^2 + 4} = |x| + 2
       \\]
+- id: 1537488179084
+  fields:
+    Front: |
+      ## RoA problem 111: State whether or not the following equation is true for all values of the variable:
+      \\[
+        \frac{16 + a}{16} = 1 + \frac{a}{16}
+      \\]
