--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -132,6 +132,10 @@ notes:
       \\[
         (-6ab)(0.5ac)
       \\]
+    Back: |
+      \\[
+        -3a^2bc
+      \\]
 - id: 1537488022013
   fields:
     Front: |
