--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -143,6 +143,10 @@ notes:
       \\[
         -(2x^2y)(-xy^4)
       \\]
+    Back: |
+      \\[
+        2x^3y^5
+      \\]
 - id: 1537488022062
   fields:
     Front: |
