--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -154,6 +154,10 @@ notes:
       \\[
         2x(x-5)
       \\]
+    Back: |
+      \\[
+        2x^2 - 10x
+      \\]
 - id: 1537488022128
   fields:
     Front: |
