--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -165,6 +165,10 @@ notes:
       \\[
         (4 - 3x)x
       \\]
+    Back: |
+      \\[
+        4x - 3x^2
+      \\]
 - id: 1537488022179
   fields:
     Front: |
