--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -176,6 +176,10 @@ notes:
       \\[
         -2(4 - 3a)
       \\]
+    Back: |
+      \\[
+        6a - 8
+      \\]
 - id: 1537488022229
   fields:
     Front: |
