--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -187,6 +187,10 @@ notes:
       \\[
         8 - (4 + x)
       \\]
+    Back: |
+      \\[
+        4 - x
+      \\]
 - id: 1537488022279
   fields:
     Front: |
