--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -198,6 +198,10 @@ notes:
       \\[
         4(x^2 - x + 2) - 5(x^2 - 2x + 1)
       \\]
+    Back: |
+      \\[
+        -x^2 + 6x + 3
+      \\]
 - id: 1537488022329
   fields:
     Front: |
