--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -209,6 +209,10 @@ notes:
       \\[
         5(3t - 4) - (t^2 + 2) - 2t(t - 3)
       \\]
+    Back: |
+      \\[
+        -3t^2 + 21t - 22
+      \\]
 - id: 1537488022379
   fields:
     Front: |
