--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -220,6 +220,10 @@ notes:
       \\[
         (4x - 1)(3x + 7)
       \\]
+    Back: |
+      \\[
+        12x^2 + 25x - 7
+      \\]
 - id: 1537488022429
   fields:
     Front: |
