--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -231,6 +231,10 @@ notes:
       \\[
         x(x - 1)(x + 2)
       \\]
+    Back: |
+      \\[
+        x^3 + x^2 - 2x
+      \\]
 - id: 1537488022479
   fields:
     Front: |
