--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -242,6 +242,10 @@ notes:
       \\[
         (2x - 1)^2
       \\]
+    Back: |
+      \\[
+        4x^2 - 4x + 1
+      \\]
 - id: 1537488022529
   fields:
     Front: |
