--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -253,6 +253,10 @@ notes:
       \\[
         (2 + 3x)^2
       \\]
+    Back: |
+      \\[
+        9x^2 + 12x + 4
+      \\]
 - id: 1537488022579
   fields:
     Front: |
