--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -264,6 +264,10 @@ notes:
       \\[
         y^4(6 - y)(5 + y)
       \\]
+    Back: |
+      \\[
+        30y^4 + y^5 - y^6
+      \\]
 - id: 1537488022629
   fields:
     Front: |
