--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -275,6 +275,10 @@ notes:
       \\[
         (t - 5)^2 - 2(t + 3)(8t - 1)
       \\]
+    Back: |
+      \\[
+        -15t^2 - 56t + 31
+      \\]
 - id: 1537488022679
   fields:
     Front: |
