--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -286,6 +286,10 @@ notes:
       \\[
         (1 + 2x)(x^2 - 3x + 1)
       \\]
+    Back: |
+      \\[
+        2x^3 - 5x^2 - x + 1
+      \\]
 - id: 1537488022729
   fields:
     Front: |
