--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -297,6 +297,10 @@ notes:
       \\[
         (1 + x - x^2)^2
       \\]
+    Back: |
+      \\[
+        x^4 - 2x^3 - x^2 + 2x + 1
+      \\]
 - id: 1537488022779
   fields:
     Front: |
