--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -308,6 +308,10 @@ notes:
       \\[
         \frac{2 + 8x}{2}
       \\]
+    Back: |
+      \\[
+        1 + 4x
+      \\]
 - id: 1537488022829
   fields:
     Front: |
