--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -319,6 +319,10 @@ notes:
       \\[
         \frac{9b + 6}{3b}
       \\]
+    Back: |
+      \\[
+        3 - 2/b
+      \\]
 - id: 1537488022879
   fields:
     Front: |
