--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -374,6 +374,10 @@ notes:
       \\[
         \frac{x/y}{z}
       \\]
+    Back: |
+      \\[
+        \frac{x}{yz}
+      \\]
 - id: 1537488023129
   fields:
     Front: |
