--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -385,6 +385,10 @@ notes:
       \\[
         \frac{x}{y/z}
       \\]
+    Back: |
+      \\[
+        \frac{zx}{y}
+      \\]
 - id: 1537488023179
   fields:
     Front: |
