--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -396,6 +396,10 @@ notes:
       \\[
         \left(\frac{-2r}{s}\right) \left(\frac{s^2}{-6t}\right)
       \\]
+    Back: |
+      \\[
+        \frac{rs}{3t}
+      \\]
 - id: 1537488023229
   fields:
     Front: |
