--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -435,6 +435,10 @@ notes:
           1 + \frac{1}{1 + x}
         }
       \\]
+    Back: |
+      \\[
+        \frac{3 + 2x}{2 + x}
+      \\]
 - id: 1537488023379
   fields:
     Front: |
