--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -446,6 +446,10 @@ notes:
       \\[
         2x + 12x^3
       \\]
+    Back: |
+      \\[
+        2x(1 + 6x^2)
+      \\]
 - id: 1537488023429
   fields:
     Front: |
