--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -457,6 +457,10 @@ notes:
       \\[
         5ab - 8abc
       \\]
+    Back: |
+      \\[
+        ab(5 - 8c)
+      \\]
 - id: 1537488023479
   fields:
     Front: |
