--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -468,6 +468,10 @@ notes:
       \\[
         x^2 + 7x + 6
       \\]
+    Back: |
+      \\[
+        (x + 6)(x + 1)
+      \\]
 - id: 1537488023529
   fields:
     Front: |
