--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -479,6 +479,10 @@ notes:
       \\[
         x^2 - x - 6
       \\]
+    Back: |
+      \\[
+        (x - 3)(x + 2)
+      \\]
 - id: 1537488023580
   fields:
     Front: |
