--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -490,6 +490,10 @@ notes:
       \\[
         x^2 - 2x - 8
       \\]
+    Back: |
+      \\[
+        (x - 4)(x + 2)
+      \\]
 - id: 1537488023629
   fields:
     Front: |
