--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -501,6 +501,10 @@ notes:
       \\[
         2x^2 + 7x - 4
       \\]
+    Back: |
+      \\[
+        (2x - 1)(x + 4)
+      \\]
 - id: 1537488023679
   fields:
     Front: |
