--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -512,6 +512,10 @@ notes:
       \\[
         9x^2 - 36
       \\]
+    Back: |
+      \\[
+        9(x - 2)(x + 2)
+      \\]
 - id: 1537488023780
   fields:
     Front: |
