--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -523,6 +523,10 @@ notes:
       \\[
         8x^2 + 10x + 3
       \\]
+    Back: |
+      \\[
+        (4x + 3)(2x + 1)
+      \\]
 - id: 1537488023831
   fields:
     Front: |
