--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -534,6 +534,10 @@ notes:
       \\[
         6x^2 - 5x - 6
       \\]
+    Back: |
+      \\[
+        (3x + 2)(2x - 3)
+      \\]
 - id: 1537488023879
   fields:
     Front: |
