--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -545,6 +545,10 @@ notes:
       \\[
         x^2 + 10x + 25
       \\]
+    Back: |
+      \\[
+        (x + 5)^2
+      \\]
 - id: 1537488023929
   fields:
     Front: |
