--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -556,6 +556,10 @@ notes:
       \\[
         t^3 + 1
       \\]
+    Back: |
+      \\[
+        (t + 1)(t^2 - t + 1)
+      \\]
 - id: 1537488023980
   fields:
     Front: |
