--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -567,6 +567,10 @@ notes:
       \\[
         4t^2 - 9s^2
       \\]
+    Back: |
+      \\[
+        (2t - 3s)(2t + 3s)
+      \\]
 - id: 1537488024030
   fields:
     Front: |
