--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -578,6 +578,10 @@ notes:
       \\[
         4t^2 - 12t + 9
       \\]
+    Back: |
+      \\[
+        (2t - 3)^2
+      \\]
 - id: 1537488024079
   fields:
     Front: |
