--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -589,6 +589,10 @@ notes:
       \\[
         x^3 - 27
       \\]
+    Back: |
+      \\[
+        (x - 3)(x^2 + 3x + 9)
+      \\]
 - id: 1537488024129
   fields:
     Front: |
