--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -600,6 +600,10 @@ notes:
       \\[
         x^3 + 2x^2 + x
       \\]
+    Back: |
+      \\[
+        x(x + 1)^2
+      \\]
 - id: 1537488024181
   fields:
     Front: |
