--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -611,6 +611,10 @@ notes:
       \\[
         x^3 - 4x^2 + 5x - 2
       \\]
+    Back: |
+      \\[
+        (x - 1)^2 (x - 2)
+      \\]
 - id: 1537488024229
   fields:
     Front: |
