--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -622,6 +622,10 @@ notes:
       \\[
         x^3 + 3x^2 - x - 3
       \\]
+    Back: |
+      \\[
+        (x - 1)(x + 1)(x + 3)
+      \\]
 - id: 1537488024279
   fields:
     Front: |
