--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -633,6 +633,10 @@ notes:
       \\[
         x^3 - 2x^2 - 23x + 60
       \\]
+    Back: |
+      \\[
+        (x - 3)(x + 5)(x - 4)
+      \\]
 - id: 1537488024329
   fields:
     Front: |
