--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -644,6 +644,10 @@ notes:
       \\[
         x^3 + 5x^2 - 2x - 24
       \\]
+    Back: |
+      \\[
+        (x - 2)(x + 3)(x + 4)
+      \\]
 - id: 1537488024379
   fields:
     Front: |
