--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -655,6 +655,10 @@ notes:
       \\[
         x^3 - 3x^2 - 4x + 12
       \\]
+    Back: |
+      \\[
+        (x - 2)(x - 3)(x + 2)
+      \\]
 - id: 1537488024446
   fields:
     Front: |
