--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -699,6 +699,10 @@ notes:
       \\[
         \frac{x^3 + 5x^2 + 6x}{x^2 - x - 12}
       \\]
+    Back: |
+      \\[
+        \frac{x(x + 2)}{x - 4}
+      \\]
 - id: 1537488024679
   fields:
     Front: |
