--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -721,6 +721,10 @@ notes:
       \\[
         \frac{x}{x^2 + x - 2} - \frac{2}{x^2 - 5x + 4}
       \\]
+    Back: |
+      \\[
+        \frac{x^2 - 6x - 4}{(x - 1)(x + 2)(x - 4)}
+      \\]
 - id: 1537488024779
   fields:
     Front: |
