--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -732,6 +732,10 @@ notes:
       \\[
         x^2 + 2x + 5
       \\]
+    Back: |
+      \\[
+        (x + 1)^2 + 4
+      \\]
 - id: 1537488024864
   fields:
     Front: |
