--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -743,6 +743,10 @@ notes:
       \\[
         x^2 - 16x + 80
       \\]
+    Back: |
+      \\[
+        (x - 8)^2 + 16
+      \\]
 - id: 1537488024912
   fields:
     Front: |
