--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -776,6 +776,10 @@ notes:
       \\[
         4x^2 + 4x - 2
       \\]
+    Back: |
+      \\[
+        (2x + 1)^2 - 3
+      \\]
 - id: 1537488025062
   fields:
     Front: |
