--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -787,6 +787,10 @@ notes:
       \\[
         3x^2 - 24x + 50
       \\]
+    Back: |
+      \\[
+        3(x - 4)^2 + 2
+      \\]
 - id: 1537488025113
   fields:
     Front: |
