--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -798,6 +798,10 @@ notes:
       \\[
         x^2 + 9x - 10 = 0
       \\]
+    Back: |
+      \\[
+        1, -10
+      \\]
 - id: 1537488025162
   fields:
     Front: |
