--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -809,6 +809,10 @@ notes:
       \\[
         x^2 - 2x - 8 = 0
       \\]
+    Back: |
+      \\[
+        -2, 4
+      \\]
 - id: 1537488025212
   fields:
     Front: |
