--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -820,6 +820,10 @@ notes:
       \\[
         x^2 + 9x - 1 = 0
       \\]
+    Back: |
+      \\[
+        \frac{-9 \pm\sqrt{85}}{2}
+      \\]
 - id: 1537488025262
   fields:
     Front: |
