--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -831,6 +831,10 @@ notes:
       \\[
         x^2 - 2x - 7 = 0
       \\]
+    Back: |
+      \\[
+        1 \pm 2\sqrt{2}
+      \\]
 - id: 1537488025312
   fields:
     Front: |
