--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -842,6 +842,10 @@ notes:
       \\[
         3x^2 + 5x + 1 = 0
       \\]
+    Back: |
+      \\[
+        \frac{-5 \pm\sqrt{13}}{6}
+      \\]
 - id: 1537488025362
   fields:
     Front: |
