--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -853,6 +853,10 @@ notes:
       \\[
         2x^2 + 7x + 2 = 0
       \\]
+    Back: |
+      \\[
+        \frac{-7 \pm\sqrt{33}}{4}
+      \\]
 - id: 1537488025412
   fields:
     Front: |
