--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -864,6 +864,10 @@ notes:
       \\[
         x^3 - 2x + 1 = 0
       \\]
+    Back: |
+      \\[
+        1,\frac{-1 \pm\sqrt{5}}{2}
+      \\]
 - id: 1537488025462
   fields:
     Front: |
