--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -875,6 +875,10 @@ notes:
       \\[
         x^3 + 3x^2 + x - 1 = 0
       \\]
+    Back: |
+      \\[
+        -1,-1 \pm\sqrt{2}
+      \\]
 - id: 1537488025512
   fields:
     Front: |
