--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -886,6 +886,8 @@ notes:
       \\[
         2x^2 + 3x + 4
       \\]
+    Back: |
+      Irreducible
 - id: 1537488025562
   fields:
     Front: |
