--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -895,6 +895,8 @@ notes:
       \\[
         2x^2 + 9x + 4
       \\]
+    Back: |
+      Not irreducible
 - id: 1537488025612
   fields:
     Front: |
