--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -904,6 +904,8 @@ notes:
       \\[
         3x^2 + x - 6
       \\]
+    Back: |
+      Not irreducible (two real roots)
 - id: 1537488025662
   fields:
     Front: |
