--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -922,6 +922,10 @@ notes:
       \\[
         (a + b)^6
       \\]
+    Back: |
+      \\[
+        a^6 + 6a^5b + 15a^4b^2 + 20a^3b^3 + 15a^2b^4 + 6ab^5 + b^6
+      \\]
 - id: 1537488025779
   fields:
     Front: |
