--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -933,6 +933,10 @@ notes:
       \\[
         (a + b)^7
       \\]
+    Back: |
+      \\[
+        a^7 + 7a^6b + 21a^5b^2 + 35a^4b^3 + 35a^3b^4 + 21a^2b^5 + 7ab^6 + b^7
+      \\]
 - id: 1537488025829
   fields:
     Front: |
