--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -944,6 +944,10 @@ notes:
       \\[
         (x^2 - 1)^4
       \\]
+    Back: |
+      \\[
+        x^8 - 4x^6 + 6x^4 - 4x^2 + 1
+      \\]
 - id: 1537488025879
   fields:
     Front: |
