--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -955,6 +955,10 @@ notes:
       \\[
         (3 + x^2)^5
       \\]
+    Back: |
+      \\[
+        243 + 405x^2 + 270x^4 + 90x^6 + 15x^8 + x^{10}
+      \\]
 - id: 1537488025930
   fields:
     Front: |
