--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -966,6 +966,10 @@ notes:
       \\[
         \sqrt{32}\sqrt{2}
       \\]
+    Back: |
+      \\[
+        8
+      \\]
 - id: 1537488025979
   fields:
     Front: |
