--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -981,6 +981,10 @@ notes:
           \sqrt[3]{54}
         }
       \\]
+    Back: |
+      \\[
+        -\frac{1}{3}
+      \\]
 - id: 1537488177451
   fields:
     Front: |
