--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -996,6 +996,10 @@ notes:
           \sqrt[4]{2}
         }
       \\]
+    Back: |
+      \\[
+        2|x|
+      \\]
 - id: 1537488177501
   fields:
     Front: |
